--- a/styles.css
+++ b/styles.css
@@ -49,3 +49,12 @@ button:hover {
 h1 {
     text-align: center;
 }
+
+textarea {
+    width: calc(100% - 22px);
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
+    margin-bottom: 10px;
+  }
